fix page scrollbar width jump when loading more content

--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,16 @@
   }
 }
 
+html {
+  /* Fix jumping scrollbar when page loads more content:
+   * https://css-tricks.com/elegant-fix-jumping-scrollbar-issue */
+  margin-left: calc(100vw - 100%);
+}
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background: rgb(237, 245, 245); */
   padding: 15px;
 }
 
